fix bug where reblog spinner is invisible during loading state

--- a/src/app/components/elements/Reblog.scss
+++ b/src/app/components/elements/Reblog.scss
@@ -24,6 +24,5 @@
     border-right-color: transparent;
     border-top-color: transparent;
     animation: loading 500ms infinite linear;
-    path {opacity: 0}
   }
 }
